--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
+  "tabWidth": 1,
+  "useTabs": true,
   "semi": true,
   "singleQuote": true,
   "printWidth": 120
