--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0",
     "tone": "^14.7.77"
   }
 }
