--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
     }
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "test": "jest --verbose",
     "test:watch": "npm run test -- --watch",
